--- a/src/css/settings/motion.css
+++ b/src/css/settings/motion.css
@@ -1,7 +1,6 @@
-/*---
-section: Settings
-title: Motion
----*/
+/*------------------------------------*\
+  #MOTION
+\*------------------------------------*/
 
 :root {
   --pulse-color: 101, 182, 220;
