--- a/src/css/settings/shapes.css
+++ b/src/css/settings/shapes.css
@@ -1,7 +1,6 @@
-/*---
-title: Shapes
-section: Settings
----*/
+/*------------------------------------*\
+  #SHAPES
+\*------------------------------------*/
 
 :root {
   --borderRadius--leaf:
