--- a/src/css/utilities/positioning.css
+++ b/src/css/utilities/positioning.css
@@ -1,3 +1,7 @@
+/*------------------------------------*\
+  #POSITIONING
+\*------------------------------------*/
+
 .u-fixed--top-center {
   @apply --position-top;
   position: fixed !important;
