--- a/src/css/settings/all.css
+++ b/src/css/settings/all.css
@@ -4,18 +4,18 @@
 
 /**
  * CONTENTS
- * Config.............Configuration and environment settings.
  * Global.............Globally-available variables and settings/config.
  * Colour.............Manage our color palette in isolation.
- * Containment........
+ * Grid........
+ * Position..........
  * Motion.............
  * Typography.........
  */
 
-@import "config";
 @import "global";
 @import "colour";
-@import "containment";
+@import "grid";
+@import "positioning";
 @import "motion";
 @import "shapes";
 @import "typography";
