--- a/src/css/settings/grid.css
+++ b/src/css/settings/grid.css
@@ -1,8 +1,6 @@
-/*---
-title: Containment
-section: Settings
----*/
-
+/*------------------------------------*\
+  #GRID-HELPERS
+\*------------------------------------*/
 
 :root {
   --margin-outter: 1rem;
@@ -228,63 +226,4 @@ section: Settings
     text-rendering: optimizeLegibility;
   };
 
-  --position-bottom: {
-    bottom: 0;
-    left: 0;
-    right: 0;
-  };
-
-  --position-bottom-left: {
-    bottom: 0;
-    left: 0;
-  };
-
-  --position-bottom-right: {
-    bottom: 0;
-    right: 0;
-  };
-
-  --position-middle: {
-    bottom: auto;
-    left: 50%;
-    right: auto;
-    top: 50%;
-    /* Hack to fix text rendering in blink */
-    transform:
-      translateY(calc(-50% - .5px))
-      translateX(calc(-50% - 1px))
-      translateZ(0) scale(1, 1);
-
-    *,
-    *::before,
-    *::after {
-      /* Hack to fix "font-smoothing vs translate" */
-      transition: none !important;
-    }
-  };
-
-  --position-top: {
-    left: 0;
-    right: 0;
-    top: 0;
-  };
-
-  --position-top-left: {
-    left: 0;
-    top: 0;
-  };
-
-  --position-top-right: {
-    right: 0;
-    top: 0;
-  };
-
-  --position-full: {
-    bottom: 0;
-    height: 100%;
-    left: 0;
-    right: 0;
-    top: 0;
-    width: 100%;
-  };
 }
