--- a/src/css/components/field.css
+++ b/src/css/components/field.css
@@ -1,70 +1,75 @@
-/*---
-title: Field
-section: Components
----*/
+@custom-selector :--focus-field :focus, .has-focus;
+@custom-selector :--invalid-field :focus:invalid, :focus.is-invalid, :invalid, .is-invalid;
+@custom-selector :--error-field :focus.is-error, .is-error;
 
 :root {
   --field-font-size: 16px;
   --field-font-size--dense: 13px;
-  --field-min-height: 36px;
+  --field-min-height: 33px;
+
+  --field-placeholder: {
+    color: var(--grey-200);
+    text-fill-color: initial;
+  };
 }
 
 .c-field {
+  display: flex;
+  font-size: var(--field-font-size);
+  max-width: 100%;
+  padding: 1em 0 .5em;
+  position: relative;
+}
+
+.c-field__input {
   @apply --middle;
   background-color: transparent;
   border-bottom: solid var(--color-field--primary);
   border-radius: 0;
   border-width: 0 0 1px;
   color: var(--color-field--secondary);
-  display: flex;
   flex-direction: row;
   flex-wrap: wrap;
   font-family: inherit;
-  font-size: var(--field-font-size);
-  margin: 6px 0;
+  margin: 0;
   min-height: var(--field-min-height); /* IE11 Input Height */
-  padding: 0 0 1px 0;
+  padding: 4px 0;
+  text-align: left;
   transition: border var(--global-duration) ease-in-out, padding .4s ease-in, padding .2s ease-out;
   width: 100%;
 
 
-  &:focus,
-  &.has-focus {
+  &:--focus-field {
     border-bottom-color: var(--color-field--focus);
     border-width: 0 0 2px;
+    color: var(--color-field--focus);
     outline: none;
-    padding-bottom: 0;
+
+    &::-webkit-input-placeholder { @apply --field-placeholder; }
   }
 
 
-  &:focus:invalid,
-  &:focus.is-invalid,
-  &:invalid,
-  &.is-invalid {
-     border-bottom-color: var(--color-field--invalid);
-     border-width: 0 0 2px;
-     padding-bottom: 0;
-   }
+  &:--invalid-field {
+    border-bottom-color: var(--color-field--invalid);
+    border-width: 0 0 2px;
+    color: var(--color-field--invalid);
+
+    &::-webkit-input-placeholder { @apply --field-placeholder; }
+  }
 
 
-  &:focus.is-error {
-     border-bottom-color: var(--color-field--error);
-     border-width: 0 0 2px;
-     padding-bottom: 0;
-   }
+  &:--error-field {
+    border-bottom-color: var(--color-field--error);
+    border-width: 0 0 2px;
+    color: var(--color-field--error);
 
-
-  &.is-error {
-     border-bottom-color: var(--color-field--error);
-     border-width: 0 0 2px;
-     padding-bottom: 0;
+    &::-webkit-input-placeholder { @apply --field-placeholder; }
   }
 
 
   &[disabled] {
     border-bottom-style: dotted;
     border-width: 0 0 2px;
-    padding-bottom: 0;
   }
 
 
@@ -102,6 +107,49 @@ section: Components
   }
 }
 
+.js-placeholder-shown:not(:focus)::placeholder, /* Fallback IE JS Hack Class */
+.c-field__input:placeholder-shown:not(:focus)::placeholder { opacity: 0; }
+
+
+.c-field__label {
+  color: var(--color-primary);
+  bottom: 0;
+  font-size: 12px;
+  font-weight: normal;
+  left: 0;
+  overflow: hidden;
+  position: absolute;
+  pointer-events: none;
+  right: 0;
+  transition: all .2s cubic-bezier(.4,0,.2,1);
+  top: 4px;
+  white-space: nowrap;
+  will-change: color, font-size, top, visibility;
+
+  .c-field__input:--invalid-field + & {
+    color: var(--color-field--invalid);
+  }
+
+  .c-field__input:--error-field + & {
+    color: var(--color-field--error);
+  }
+
+  .c-field__input::placeholder {
+    opacity: 1;
+    transition: opacity .2s ease-in-out;
+  }
+
+
+  .js-placeholder-shown:not(:focus) + &,
+  .c-field__input:placeholder-shown:not(:focus) + & {
+    color: color(var(--black) a(.26));
+    font-size: 1em;
+    top: 21px;
+  }
+
+  .c-field__input[type="color"] ~ & { visibility: hidden; }
+}
+
 .t-dark,
 .t-fullscreen,
 :--fullscreen {
@@ -113,17 +161,6 @@ section: Components
      }
   }
 }
-
-
-  .c-field__input {
-    background-color: transparent;
-    border: none;
-    flex: 1 1 0%;
-    font-size: var(--field-font-size);
-    margin-bottom: 0;
-    min-width: 50px;
-    width: auto;
-  }
 
 
 .c-field--block {
@@ -186,7 +223,7 @@ section: Components
     border-radius: 2px;
     border-bottom: none;
     height: 36px;
-    padding-right: 20px;
+    padding: 0;
     transition: background-color .1s ease-in-out;
 
     &:hover {
@@ -195,12 +232,18 @@ section: Components
 
     & > .c-icon {
       color: var(--grey-600);
-      margin: 4px 20px;
+      margin: 6px 20px;
     }
+  }
+
+  .c-field__input {
+    border-bottom: none;
+    width: auto;
   }
 
   .c-field__input::placeholder {
     color: var(--grey-600);
+    opacity: 1 !important;
   }
 }
 
